use correct card for first artwork item on mobile

--- a/src/components/containers/artists/ArtistArtworkDetailContainer/artistArtworkDetailContainer.module.css
+++ b/src/components/containers/artists/ArtistArtworkDetailContainer/artistArtworkDetailContainer.module.css
@@ -91,7 +91,3 @@
 .framed {
   @apply text-black-60;
 }
-
-.singleMediaItem {
-  @apply mb-[1.25rem];
-}
